--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <li>Terms</li>
             <li>Contact</li>
         </ul>
-        <span>Copyright @ 2023, Radix Enterprise Ltd.</span>
+        <span>Copyright &copy; 2023, Radix Enterprise Ltd.</span>
     </footer>
 </body>
 
